# luchoh.new

./: .codechatignore  .gitignore  alembic.ini  annotate.py  devenv.nix  pyproject.toml
_prompts/: _message.md  backend.md  frontend.md  general.md
backend/: .codechatignore  .flake8  __init__.py  commands.py  devenv.nix  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07f9763630a3_generate_all_tables.py  3bebbfa39e6b_remove_galleries_and_replace_them_with_.py  4341a6fa326b_add_created_at_and_updated_at_to_images.py  63531a8609e7_adding_thumbnail_url_to_images.py  669c1f65dbaf_remove_slug_from_images_it_will_be_.py  7e4671380e48_transform_slug_into_tag.py  a26c0cac4190_add_sticky_field_and_tags_relationship_.py  c90baf1fe0c1_add_gallery_image_association_table.py
backend/app/: __init__.py  dotenv  main.py  utils.py
backend/app/api/: __init__.py  api.py  deps.py
backend/app/api/endpoints/: __init__.py  auth.py  galleries.py  images.py  tags.py  upload.py
backend/app/auth/: __init__.py  auth.py  security.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/crud/: __init__.py  base.py  gallery.py  image.py  tag.py  user.py
backend/app/db/: __init__.py  base_class.py  session.py
backend/app/models/: __init__.py  base.py  gallery.py  image.py  user.py
backend/app/schemas/: __init__.py  gallery.py  image.py  msg.py  tag.py  token.py  user.py
backend/app/static/: admin.js  styles.css
backend/app/static/css/: admin.css
backend/app/static/js/: admin.js  auth.js  gallery.js  global.js  image.js  tag.js  utils.js
backend/app/templates/: admin.html
backend/app/templates/admin/: edit_image.html
backend/app/utils/: __init__.py  auth.py  file.py  image.py  slugify.py
frontend/: .codechatignore  .eleventy.js  config.js  devenv.nix  dotenv  nodemon.json  package-lock.json  package.json  server.js
frontend/src/: galleries.njk  gallery.njk  image.njk  index.njk  tag.njk  tags.njk
frontend/src/_includes/: base.njk
frontend/src/_includes/partials/: footer.njk  header.njk  image.njk  menu.njk  photograph.njk  site.njk  sticky.njk  tag-list.njk
frontend/src/css/: styles.css
frontend/src/js/: main.js
utils/: annotate.py  compare.py  compare.ts
