[tool.poetry]
name = "luchoh.com"
version = "0.1.0"
description = "luchoH Photography"
authors = ["Lucho Hristov <luchoh@luchoh.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
pymysql = "^1.0.2"  # Replace mysqlclient with pymysql
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^1.10.7"}
jinja2 = "^3.1.4"
alembic = "^1.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pylint = "^3.2.4"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"